eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zimple-bank-api-service
spec:
  selector:
    app: zimple-bank-api
  ports:
    - protocol: TCP
      port: 80 # on which the server will listen to incoming request
      targetPort: http-server # port of the container where the request will be sent to
      name: http-service
    - protocol: TCP
      port: 90
      targetPort: grpc-server
      name: grpc-service
  type: LoadBalancer # change to ClusterIP if use Ingress
